# apr-model-qa-playbook

./: .clippy.toml  .gitignore  .pmat-metrics.toml  CLAUDE.md  Cargo.toml  Makefile  README.md  batuta-qa-pipeline.toml  book.toml  deny.toml  proptest.toml  pyproject.toml
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: book.yml  ci.yml  cross-repo-validation.yml
.pmat/: dead-code-cache.json
.pmat-work/PMAT-001/: contract.json
book/src/: SUMMARY.md  examples.md  getting-started.md  introduction.md  playbook-format.md  running-tests.md  specification.md
certifications/deepseek-coder-1.3b-instruct/: evidence.json
certifications/deepseek-r1-distill-qwen-1.5b/: evidence.json
certifications/gemma-2-2b-it/: evidence.json
certifications/gemma-3-1b-it/: evidence.json
certifications/granite-3.1-2b-instruct/: evidence.json
certifications/llama-3.1-8b-instruct/: evidence.json
certifications/llama-3.2-1b-instruct/: evidence.json
certifications/llama-3.2-3b-instruct/: evidence.json
certifications/nemotron-nano-4b/: evidence.json
certifications/phi-3.5-mini-instruct/: evidence.json
certifications/phi-4-mini-instruct/: evidence.json
certifications/qwen2-5-coder-0-5b-instruct/: checklist.md  evidence.json
certifications/qwen2-5-coder-1-5b-instruct/: evidence.json
certifications/qwen2-5-coder-14b-instruct/: evidence.json
certifications/qwen2-5-coder-32b-instruct/: evidence.json
certifications/qwen2-5-coder-3b-instruct/: evidence.json
certifications/qwen2-5-coder-7b-instruct/: evidence.json
certifications/qwen2.5-1.5b-instruct/: evidence.json
certifications/qwen2.5-3b-instruct/: evidence.json
certifications/qwen2.5-7b-instruct/: evidence.json
certifications/qwen2.5-coder-0.5b/: evidence.json
certifications/qwen2.5-coder-0.5b-mvp/: evidence.json
certifications/qwen2.5-coder-1.5b/: evidence.json
certifications/qwen2.5-coder-1.5b-mvp/: evidence.json
certifications/qwen2.5-coder-3b/: evidence.json
certifications/qwen2.5-coder-3b-mvp/: evidence.json
certifications/qwen2.5-coder-7b/: evidence.json
certifications/qwen2.5-coder-7b-mvp/: evidence.json
certifications/qwen3-0.6b/: evidence.json
certifications/qwen3-1.7b/: evidence.json
certifications/qwen3-4b/: evidence.json
certifications/smollm2-1.7b-instruct/: evidence.json
certifications/smollm2-135m-instruct/: evidence.json
certifications/smollm2-360m-instruct/: evidence.json
certifications/stablelm-2-zephyr-1.6b/: evidence.json
certifications/stablelm-zephyr-3b/: evidence.json
certifications/starcoder2-3b/: evidence.json
certifications/tinyllama-1.1b/: evidence.json
crates/apr-qa-certify/: Cargo.toml
crates/apr-qa-certify/src/: lib.rs  main.rs
crates/apr-qa-cli/: Cargo.toml
crates/apr-qa-cli/examples/: fail_fast_demo.rs  integrity_lock_demo.rs
crates/apr-qa-cli/src/: lib.rs  main.rs
crates/apr-qa-gen/: Cargo.toml
crates/apr-qa-gen/examples/: bootstrap_playbook.rs  generate_scenarios.rs
crates/apr-qa-gen/src/: bootstrapper.rs  error.rs  hf_parity.rs  kernel_profile.rs  lib.rs  models.rs  oracle.rs  proptest_impl.proptest-regressions  proptest_impl.rs  scenario.rs
crates/apr-qa-report/: Cargo.toml
crates/apr-qa-report/examples/: calculate_mqs.rs  generate_certificate.rs  generate_rag_markdown.rs
crates/apr-qa-report/src/: certificate.rs  certification_data.rs  defect_fixture_map.yaml  defect_map.rs  error.rs  evidence_export.rs  html.rs  junit.rs  lib.rs  markdown.rs  mqs.rs  popperian.rs  ticket.rs
crates/apr-qa-runner/: Cargo.toml
crates/apr-qa-runner/examples/: collect_evidence.rs  contract_demo.rs  rosetta_testing.rs
crates/apr-qa-runner/src/: apr_format_contract.yaml  command.rs  contract.rs  conversion.rs  diagnostics.rs  differential.rs  error.rs  evidence.rs  executor.rs  family_contract.rs  integrity.rs  layout_contract.rs  lib.rs  oracle.rs  parallel.rs  patterns.rs  playbook.rs  process.rs  provenance.rs  test_fixtures.rs
docs/certifications/: models.csv
docs/five-whys/: GH-190-systemic-conversion-failures.md  GH-191-why-still-broken-after-five-whys.md
docs/roadmaps/: roadmap.yaml
docs/specifications/: apr-playbook-spec.md  certified-testing-qa-checklist.md  certified-testing.md  fail-fast-report.md  hf-cache-resolution.md  hf-parity-oracle-qa-checklist.md  hf-parity-oracle.md  improve-playbooks.md  isolated-test-outputs.md  oracle-integration-falsification-protocol.md
docs/tickets/: GH-190-GGUF-APR-CONVERSION-GARBAGE-OUTPUT.md  GH-191-APR-QUANTIZATION-DATA-LOSS.md
docs/troubleshooting/: oracle-integration.md
docs/workflows/: certification.md
examples/: llama-3.2.yaml  phi-3.yaml  qwen-coder.yaml
playbooks/: evidence.schema.json  playbook.lock.yaml  playbook.schema.yaml
playbooks/models/: codegemma-7b-mvp.playbook.yaml  codellama-13b-mvp.playbook.yaml  codellama-34b-mvp.playbook.yaml  codellama-70b-mvp.playbook.yaml  codellama-7b-mvp.playbook.yaml  codestral-22b-mvp.playbook.yaml  deepseek-coder-1.3b-ci.playbook.yaml  deepseek-coder-1.3b-mvp.playbook.yaml  deepseek-coder-1.3b-quick.playbook.yaml  deepseek-coder-1.3b-smoke.playbook.yaml  deepseek-coder-1.3b.playbook.yaml  deepseek-coder-33b-mvp.playbook.yaml  deepseek-coder-6.7b-mvp.playbook.yaml  deepseek-coder-7b-ci.playbook.yaml  deepseek-coder-7b-mvp.playbook.yaml  deepseek-coder-7b-quick.playbook.yaml  deepseek-coder-7b-smoke.playbook.yaml  deepseek-coder-7b.playbook.yaml  deepseek-coder-v2-lite-mvp.playbook.yaml  deepseek-r1-distill-llama-70b-mvp.playbook.yaml  deepseek-r1-distill-llama-8b-mvp.playbook.yaml  deepseek-r1-distill-qwen-1.5b-mvp.playbook.yaml  deepseek-r1-distill-qwen-14b-mvp.playbook.yaml  deepseek-r1-distill-qwen-32b-mvp.playbook.yaml  deepseek-r1-distill-qwen-7b-mvp.playbook.yaml  dolphin-2.6-mistral-7b-mvp.playbook.yaml  dolphin3.0-llama3.1-8b-mvp.playbook.yaml  (+90 more)
prompts/: code_bench.txt
scripts/: check-docs-consistency.sh  coverage-check.sh  diagnose-conversion.sh  generate_golden.py  golden-generate.sh  parity-check.sh  parity-list.sh  validate-aprender-alignment.sh  validate-schemas.sh
tests/: integration_tests.rs
(+41 files in other folders)
