[workspace]
resolver = "2"
members = [
    "crates/apr-qa-gen",
    "crates/apr-qa-runner",
    "crates/apr-qa-report",
    "crates/apr-qa-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["PAIML Engineering <engineering@paiml.com>"]
license = "MIT"
repository = "https://github.com/paiml/apr-model-qa-playbook"
rust-version = "1.85"

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
anyhow = "1.0"

# Async
tokio = { version = "1.43", features = ["full"] }

# Testing
proptest = "1.6"
criterion = "0.5"

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Signal handling
ctrlc = "3.4"

# Workspace crates
apr-qa-gen = { path = "crates/apr-qa-gen" }
apr-qa-runner = { path = "crates/apr-qa-runner" }
apr-qa-report = { path = "crates/apr-qa-report" }
apr-qa-cli = { path = "crates/apr-qa-cli" }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
