[workspace]
resolver = "2"
members = [
    "crates/apr-qa-gen",
    "crates/apr-qa-runner",
    "crates/apr-qa-report",
    "crates/apr-qa-cli",
    "crates/apr-qa-certify",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["PAIML Engineering <engineering@paiml.com>"]
license = "MIT"
repository = "https://github.com/paiml/apr-model-qa-playbook"
rust-version = "1.85"
exclude = [
    "output/", "certifications/", "docs/", "book/", "scripts/",
    ".pmat/", ".pmat-work/", "target/", "*.profraw", "*.profdata",
    ".vscode/", ".idea/", "proptest-regressions/",
]

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
anyhow = "1.0"

# Async
tokio = { version = "1.43", features = ["full"] }

# Logging/Tracing
tracing = "0.1"

# Testing
proptest = "1.6"
criterion = "0.5"

# CSV parsing
csv = "1.3"

# Regex
regex = "1.11"

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Signal handling
ctrlc = "3.4"

# SafeTensors parsing
safetensors = "0.4"

# Workspace crates
apr-qa-gen = { version = "0.1.0", path = "crates/apr-qa-gen" }
apr-qa-runner = { version = "0.1.0", path = "crates/apr-qa-runner" }
apr-qa-report = { version = "0.1.0", path = "crates/apr-qa-report" }
apr-qa-cli = { version = "0.1.0", path = "crates/apr-qa-cli" }
apr-qa-certify = { version = "0.1.0", path = "crates/apr-qa-certify" }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
