[project]
name = "apr-model-qa-playbook"
version = "0.1.0"
description = "Property-based model qualification testing framework"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "transformers>=4.38",
    "safetensors>=0.4",
    "accelerate>=0.25",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
