[package]
name = "apr-qa-report"
description = "Popperian report generator and MQS scoring for APR model qualification"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true }
apr-qa-gen = { workspace = true }
apr-qa-runner = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
